test_scores/negative_dimers/features/P52594.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P52594.pkl.xz